Fixed alignment/margin

--- a/src/client/src/App.css
+++ b/src/client/src/App.css
@@ -88,7 +88,7 @@
 .rides{
   justify-content: center;
   display: grid;
-  grid-template-columns: 50% 50%;
+  grid-template-columns: 40% 50%;
 }
 
 .ridePhoto{
@@ -109,7 +109,7 @@ p {
 h1 {
   margin-top: 2rem;
   margin-bottom: 2rem;
-  font-size: 2.9em;
+  font-size: 3em;
   text-align: center;
 
 
